--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Weer API</title>
-
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="liveweer"></div>
     <script src="script.js"></script>
   </body>
 </html>
